Update Internal - 副本.html

--- a/Internal - 副本.html
+++ b/Internal - 副本.html
@@ -14,7 +14,7 @@
             background-position: bottom;
             text-align: center;
             font-weight: bold;
-            font-family: 'Bosch Office Sans';
+            font-family: 'Sans';
         }
         .header {
             line-height: 100px;
